Just make some progress with the project

--- a/Advanture_Booking/index.html
+++ b/Advanture_Booking/index.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Travel With US</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible+Mono:ital,wght@0,200..800;1,200..800&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
     <header>
         <div class="nav">
@@ -15,12 +22,57 @@
             <div id="options">
                 <div class="options">Home</div>
                 <div class="options">Explore</div>
+                <div class="options">Tour</div>
                 <div class="options">About</div>
                 <div class="options">Contact</div>
                 <div class="options">Login</div>
             </div>
         </div>
     </header>
+    <main>
+        <div id="Home" class="main">
+            <div class="container_home">
+                <h1>
+                    EXPLORE THE COLOURFULL WORLD
+                </h1>
+                <div class="line"></div>
+                <h1 class="main_p">
+                    <p> A WONDERFUL ADVENTURE AWITS YOU </p>
+                </h1>
+                <div class="learn_btn">
+                    Learn more
+                </div>
+            </div>
+        </div>
+        <div class="explore">
+            <h1>Upcoming Events </h1>
+            <div class="line"></div>
+            <div class="events">
+                <div class="event">
+                    <img src="IMAGES/Kedar.webp" alt="">
+                    <h4>Panch Keder</h4>
+                    <p>
+                        A spiritual journey through five sacred shrines in the Himalayas.
+                    </p>
+                </div>
+                <div class="event">
+                    <img src="IMAGES/4 dham.jpg" alt="">
+                    <h4>4 Dham Yatra</h4>
+                    <p>
+                        A pilgrimage to the four sacred abodes of Hindu deities.
+                    </p>
+                </div>
+                <div class="event">
+                    <img src="IMAGES/leh ladak.jpg" alt="">
+                    <h4>Leh Ladak</h4>
+                    <p>
+                        An adventurous trip to the high-altitude desert of Ladakh.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </main>
     <script src="script.js"></script>
 </body>
+
 </html>
