Added all details options

--- a/Advanture_Booking/index.html
+++ b/Advanture_Booking/index.html
@@ -39,8 +39,8 @@
                 <h1 class="main_p">
                     <p> A WONDERFUL ADVENTURE AWITS YOU </p>
                 </h1>
-                <div class="learn_btn">
-                    Learn more
+                <div class="btn">
+                    Explore Now
                 </div>
             </div>
         </div>
@@ -54,6 +54,7 @@
                     <p>
                         A spiritual journey through five sacred shrines in the Himalayas.
                     </p>
+                    <div class="btn">All Details</div>
                 </div>
                 <div class="event">
                     <img src="IMAGES/4 dham.jpg" alt="">
@@ -61,6 +62,7 @@
                     <p>
                         A pilgrimage to the four sacred abodes of Hindu deities.
                     </p>
+                    <div class="btn">All Details</div>
                 </div>
                 <div class="event">
                     <img src="IMAGES/leh ladak.jpg" alt="">
@@ -68,6 +70,7 @@
                     <p>
                         An adventurous trip to the high-altitude desert of Ladakh.
                     </p>
+                    <div class="btn">All Details</div>
                 </div>
             </div>
         </div>
