Just make some hanges

--- a/Advanture_Booking/index.html
+++ b/Advanture_Booking/index.html
@@ -45,7 +45,7 @@
             </div>
         </div>
         <div class="explore">
-            <h1>Upcoming Events </h1>
+            <h1>Most Populer Tour </h1>
             <div class="line"></div>
             <div class="events">
                 <div class="event">
@@ -72,6 +72,26 @@
                     </p>
                     <div class="btn">All Details</div>
                 </div>
+            </div>
+        </div>
+        <div class="contact">
+            <div class="contacts">
+                <h1>Contact Us</h1>
+                <div class="line"></div>
+            </div>
+            <div class="detail_contact">
+            <div class="box">
+                <h2>Send us a message</h2>
+                <div class="line"></div>
+            </div>
+            <div class="details">
+                <p>Prefer some other way ?
+Reach us by using the details given below</p>
+                <div class="lines"></div>
+                <div class="con_details">Email: rudy.77goswami@gmail.com</div>
+                <div class="con_details">+91 8000000000</div>
+                <div class="con_details">Location: India</div>
+            </div>
             </div>
         </div>
     </main>
