--- a/Spotify/index.html
+++ b/Spotify/index.html
@@ -8,12 +8,20 @@
     <link rel="stylesheet" href="utility.css">
 </head>
 <body>
-    <div class="container flex" >
-        <div class="left border">
-            <div class="home"></div>
-            <div class="library"></div> 
+    <div class="container flex bg-black" >
+        <div class="left  ">
+            <div class="home bg-grey rounded m-1 p-1 ">
+                <div class="logo"><img class="invert" src="logo.svg" alt="Spotify Logo">Spotify</div>
+                <ul>
+                    <li><img class="invert" src="home.svg" alt="home">Home</li>
+                    <li><img class="invert" src="search.svg" alt="search">Search</li>
+                </ul>
+            </div>
+            <div class="library bg-grey rounded m-1 p-1">
+                
+            </div> 
         </div>
-        <div class="right border">Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi, explicabo! Commodi est, itaque nihil nulla perspiciatis culpa possimus modi delectus?</div>
+        <div class="right border ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi, explicabo! Commodi est, itaque nihil nulla perspiciatis culpa possimus modi delectus?</div>
 
     </div>
 </body>
