Almost completed the Libreay Part now moving to the main part

--- a/Spotify/index.html
+++ b/Spotify/index.html
@@ -18,11 +18,26 @@
                 </ul>
             </div>
             <div class="library bg-grey rounded m-1 p-1">
+                <div class="heading">
+                    <img class="invert" src="library.png" alt="">
+                    <h3>
+                        Your Library
+                    </h3>
+                </div>
+                <div class="footer">
+                <div>Leagal</div>
+                <div>Privacy Center</div>
+                <div>Privacy Policy</div>
+                <div>Cookies</div>
+                <div>About Ads</div>
+                <div>Accessibility</div>
                 
+            </div>
             </div> 
+            
         </div>
         <div class="right border ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi, explicabo! Commodi est, itaque nihil nulla perspiciatis culpa possimus modi delectus?</div>
 
     </div>
 </body>
-</html>
+</html> 
