started the mmain part

--- a/Spotify/index.html
+++ b/Spotify/index.html
@@ -36,8 +36,15 @@
             </div> 
             
         </div>
-        <div class="right border ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi, explicabo! Commodi est, itaque nihil nulla perspiciatis culpa possimus modi delectus?</div>
-
+        <div class="right border ">
+        <div class="header">
+            <div class="nav"></div>
+            <div class="buttons">
+                <button>Signup</button>
+                <button>Login</button>
+            </div>
+        </div>
+        </div>
     </div>
 </body>
 </html> 
