Now starting to write javascript

--- a/Spotify/index.html
+++ b/Spotify/index.html
@@ -60,15 +60,25 @@
             <div class="spotify_playlist ">
                 <h1>Spotify Playlist</h1>
                 <div class="cardscontainer">
-                    <div class="card border ">
+                    <div class="card ">
+                        <div class="play">
+                            <img src="play.svg" alt="">
+                        </div>
+                        <img src="aujla.jpg" alt="">
+                        <h2>Making Memories</h2>
+                        <p>Karan Aujla, Ikky</p>
+                    </div>
+                    <div class="card ">
                         <img src="aujla.jpg" alt="">
                         <h2>Making Memories</h2>
                         <p>Karan Aujla, Ikky</p>
                     </div>
                 </div>
+
             </div>
         </div>
     </div>
+    <script src="script.js"></script>
 </body>
 
 </html>
