--- a/Spotify/index.html
+++ b/Spotify/index.html
@@ -53,8 +53,8 @@
                     </svg>
                 </div>
                 <div class="buttons">
-                    <button>Signup</button>
-                    <button>Login</button>
+                    <button class="signupbtn">Signup</button>
+                    <button class="loginbtn">Login</button>
                 </div>
             </div>
             <div class="spotify_playlist ">
@@ -74,7 +74,14 @@
                         <p>Karan Aujla, Ikky</p>
                     </div>
                 </div>
-
+                <div class="playbar">
+                    <div class="songbutton">
+                        <img src="prevsong.svg
+                        " alt="">
+                        <img src="plays.svg" alt="">
+                        <img src="nextsong.svg" alt="">
+                    </div>
+                </div>
             </div>
         </div>
     </div>
