Made some new changes which wil make the website look more good

--- a/Spotify/index.html
+++ b/Spotify/index.html
@@ -26,6 +26,21 @@
                         Your Library
                     </h3>
                 </div>
+                <div class="songlist">
+                    <ul>
+                        <li><img class=" invert" src="music.svg" alt="">
+                            <div class="info">
+                                <div>Song name </div>
+                                <div class="light-text">artist name</div>
+                                
+                            </div>
+                            <div class="playnow">
+                                <img class="invert" src="plays.svg" alt="">
+                                <span>Play  Now</span>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
                 <div class="footer">
                     <div>Leagal</div>
                     <div>Privacy Center</div>
@@ -75,12 +90,14 @@
                     </div>
                 </div>
                 <div class="playbar">
+                    <div class="songinfo"> </div>
                     <div class="songbutton">
                         <img src="prevsong.svg
                         " alt="">
                         <img src="plays.svg" alt="">
                         <img src="nextsong.svg" alt="">
                     </div>
+                    <div class="songtime"></div>
                 </div>
             </div>
         </div>
