Made a lot of changes and made things working.

--- a/Spotify/index.html
+++ b/Spotify/index.html
@@ -13,7 +13,7 @@
     <div class="container flex bg-black">
         <div class="left  ">
             <div class="home bg-grey rounded m-1 p-1 ">
-                <div class="logo"><img class="invert" src="logo.svg" alt="Spotify Logo">Spotify</div>
+                <div class="logo"><img class="" src="logo.svg" alt="" style="width: 55px;  "><span>Spotify</span></div>
                 <ul>
                     <li><img class="invert" src="home.svg" alt="home">Home</li>
                     <li><img class="invert" src="search.svg" alt="search">Search</li>
@@ -28,7 +28,7 @@
                 </div>
                 <div class="songlist">
                     <ul>
-                        
+
                     </ul>
                 </div>
                 <div class="footer">
@@ -82,17 +82,21 @@
                 <div class="playbar invert">
                     <div class="seekbar">
                         <div class="circle">
-                            
+
                         </div>
                     </div>
-                    <div class="songinfo"> </div>
-                    <div class="songbutton">
-                        <img src="prevsong.svg
-                        " alt="">
-                        <img src="plays.svg" alt="">
-                        <img src="nextsong.svg" alt="">
+                    <div class="playbar_thing">
+
+                        <div class="songinfo"> </div>
+                        <div class="songbutton">
+                            <img id="previous" src="prevsong.svg
+                            " alt="">
+                            <img id="play" src="plays.svg" alt="">
+                            <img id="next" src="nextsong.svg" alt="">
+                        </div>
+                        <div class="songtime"></div>
+
                     </div>
-                    <div class="songtime"></div>
                 </div>
             </div>
         </div>
