--- a/Spotify/index.html
+++ b/Spotify/index.html
@@ -12,8 +12,12 @@
 <body>
     <div class="container flex bg-black">
         <div class="left  ">
+            <div class="close">
+                <img class="invert" src="close.svg" alt="">
+            </div>
             <div class="home bg-grey rounded m-1 p-1 ">
-                <div class="logo"><img class="" src="logo.svg" alt="" style="width: 55px;  "><span>Spotify</span></div>
+                <div class="logo"><img class="" src="logo.svg" alt="" style="width: 45px;  "><span>Spotify</span>
+            </div>
                 <ul>
                     <li><img class="invert" src="home.svg" alt="home">Home</li>
                     <li><img class="invert" src="search.svg" alt="search">Search</li>
@@ -46,6 +50,7 @@
         <div class="right bg-grey rounded">
             <div class="header">
                 <div class="nav">
+                    <img class="invert hamburger" src="hamburger.svg" alt="">
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path
                             d="M15 6L9.70711 11.2929C9.37377 11.6262 9.20711 11.7929 9.20711 12C9.20711 12.2071 9.37377 12.3738 9.70711 12.7071L15 18"
