--- a/Spotify/index.html
+++ b/Spotify/index.html
@@ -99,8 +99,15 @@
                             <img id="play" src="plays.svg" alt="">
                             <img id="next" src="nextsong.svg" alt="">
                         </div>
-                        <div class="songtime"></div>
+                        <div class="flex  justify-center " style="gap: 20px;">
 
+                            <div class="songtime"></div>
+                            <div class="volume"><img  src="volume.svg" alt="">
+                            <div class="range">
+                                <input type="range" name="volume" >
+                            </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
