Made one change

--- a/Spotify/index.html
+++ b/Spotify/index.html
@@ -79,6 +79,9 @@
                         <p>Karan Aujla, Ikky</p>
                     </div>
                     <div class="card ">
+                        <div class="play">
+                            <img src="play.svg" alt="">
+                        </div>
                         <img src="aujla.jpg" alt="">
                         <h2>Making Memories</h2>
                         <p>Karan Aujla, Ikky</p>
