Trying to make the albums more dynamic

--- a/Spotify/index.html
+++ b/Spotify/index.html
@@ -70,12 +70,13 @@
             <div class="spotify_playlist ">
                 <h1>Spotify Playlist</h1>
                 <div class="cardscontainer">
+                    <a href="Songs/Karan Aujla/Boyfriend.mp3"></a>
                     <div class="card ">
                         <div class="play">
                             <img src="play.svg" alt="">
                         </div>
                         <img src="aujla.jpg" alt="">
-                        <h2>Making Memories</h2>
+                        <h2>Punjabi Mix</h2>
                         <p>Karan Aujla, Ikky</p>
                     </div>
                     <div class="card ">
@@ -83,8 +84,8 @@
                             <img src="play.svg" alt="">
                         </div>
                         <img src="aujla.jpg" alt="">
-                        <h2>Making Memories</h2>
-                        <p>Karan Aujla, Ikky</p>
+                        <h2>Hindi Mashup</h2>
+                        <p>Arjit Singh</p>
                     </div>
                 </div>
                 <div class="playbar invert">
