Just made Some changes with the Sign In page and created the Sign Up page

--- a/Spotify/Signup.html
+++ b/Spotify/Signup.html
@@ -15,17 +15,15 @@
 
     <div class="login_container">
         <div class="login_logo">
-            <img class="invert" src="login_logo.svg" alt="">Wellcom Back
+            <img class="invert" src="login_logo.svg" alt="">Wellcom To Spotify
         </div>
         <div class="input_id">
-            <input type="text" placeholder="Enter your id">
+            <input type="text" placeholder="Enter your Email id">
         </div>
-        <div class="input_pass">
-            <input type="password" placeholder="Enter your password">
-        </div>
+        
         <div class="login_page_login">
             <button>
-                Sign In
+                Sign Up
             </button>
         </div>
         <p>or</p>
@@ -49,7 +47,7 @@
         </div>
     </div>
     <div class="dont_have_account">
-        <p>Don't Have account <a href="signup.html">Sign Up</a></p>
+        <p>Already Have account <a href="login.html">Sign In</a></p>
     </div>
 
 
