Made the File to store all the img in one place And also edited the html so that there is no error that does not show the image

--- a/Spotify/Signup.html
+++ b/Spotify/Signup.html
@@ -15,7 +15,7 @@
 
     <div class="login_container">
         <div class="login_logo">
-            <img class="invert" src="login_logo.svg" alt="">Wellcom To Spotify
+            <img class="invert" src="Images/login_logo.svg" alt="">Wellcom To Spotify
         </div>
         <div class="input_id">
             <input type="text" placeholder="Enter your Email id">
@@ -29,7 +29,7 @@
         <p>or</p>
         <div class="login_options">
             <div class="login_option">
-                <span><img class="invert" src="mobile.svg" alt=""></span>
+                <span><img class="invert" src="Images/mobile.svg" alt=""></span>
                 <p>Continue with Phone number</p>
             </div>
             <div class="login_option">
