--- a/Spotify/index.html
+++ b/Spotify/index.html
@@ -13,19 +13,19 @@
     <div class="container flex bg-black">
         <div class="left  ">
             <div class="close">
-                <img class="invert" src="close.svg" alt="">
+                <img class="invert" src="Images/close.svg" alt="">
             </div>
             <div class="home bg-grey rounded m-1 p-1 ">
-                <div class="logo"><img class="" src="logo.svg" alt="" style="width: 45px;  "><span>Spotify</span>
+                <div class="logo"><img class="" src="Images/logo.svg" alt="" style="width: 45px;  "><span>Spotify</span>
             </div>
                 <ul>
-                    <li><img class="invert" src="home.svg" alt="home">Home</li>
-                    <li><img class="invert" src="search.svg" alt="search">Search</li>
+                    <li><img class="invert" src="Images/home.svg" alt="home">Home</li>
+                    <li><img class="invert" src="Images/search.svg" alt="search">Search</li>
                 </ul>
             </div>
             <div class="library bg-grey rounded m-1 p-1">
                 <div class="heading">
-                    <img class="invert" src="library.png" alt="">
+                    <img class="invert" src="Images/library.png" alt="">
                     <h3>
                         Your Library
                     </h3>
@@ -50,7 +50,7 @@
         <div class="right bg-grey rounded">
             <div class="header">
                 <div class="nav">
-                    <img class="invert hamburger" src="hamburger.svg" alt="">
+                    <img class="invert hamburger" src="Images/hamburger.svg" alt="">
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path
                             d="M15 6L9.70711 11.2929C9.37377 11.6262 9.20711 11.7929 9.20711 12C9.20711 12.2071 9.37377 12.3738 9.70711 12.7071L15 18"
@@ -73,17 +73,17 @@
                     <a href="Songs/Karan Aujla/Boyfriend.mp3"></a>
                     <div class="card ">
                         <div class="play">
-                            <img src="play.svg" alt="">
+                            <img src="Images/play.svg" alt="">
                         </div>
-                        <img src="aujla.jpg" alt="">
+                        <img src="Images/aujla.jpg" alt="">
                         <h2>Punjabi Mix</h2>
                         <p>Karan Aujla, Ikky</p>
                     </div>
                     <div class="card ">
                         <div class="play">
-                            <img src="play.svg" alt="">
+                            <img src="Images/play.svg" alt="">
                         </div>
-                        <img src="aujla.jpg" alt="">
+                        <img src="Images/aujla.jpg" alt="">
                         <h2>Hindi Mashup</h2>
                         <p>Arjit Singh</p>
                     </div>
@@ -98,15 +98,15 @@
 
                         <div class="songinfo"> </div>
                         <div class="songbutton">
-                            <img id="previous" src="prevsong.svg
+                            <img id="previous" src="Images/prevsong.svg
                             " alt="">
-                            <img id="play" src="plays.svg" alt="">
-                            <img id="next" src="nextsong.svg" alt="">
+                            <img id="play" src="Images/plays.svg" alt="">
+                            <img id="next" src="Images/nextsong.svg" alt="">
                         </div>
                         <div class="flex  justify-center " style="gap: 20px;">
 
                             <div class="songtime"></div>
-                            <div class="volume"><img  src="volume.svg" alt="">
+                            <div class="volume"><img  src="Images/volume.svg" alt="">
                             <div class="range">
                                 <input type="range" name="volume" >
                             </div>
