--- a/Spotify/login.html
+++ b/Spotify/login.html
@@ -15,7 +15,7 @@
 
     <div class="login_container">
         <div class="login_logo">
-            <img class="invert" src="login_logo.svg" alt="">Wellcom Back
+            <img class="invert" src="Images/login_logo.svg" alt="">Wellcom Back
         </div>
         <div class="input_id">
             <input type="text" placeholder="Enter your id">
@@ -31,7 +31,7 @@
         <p>or</p>
         <div class="login_options">
             <div class="login_option">
-                <span><img class="invert" src="mobile.svg" alt=""></span>
+                <span><img class="invert" src="Images/mobile.svg" alt=""></span>
                 <p>Continue with Phone number</p>
             </div>
             <div class="login_option">
