--- a/Spotify/index.html
+++ b/Spotify/index.html
@@ -71,7 +71,7 @@
                 <h1>Spotify Playlist</h1>
                 <div class="cardscontainer">
                     <a href="Songs/Karan Aujla/Boyfriend.mp3"></a>
-                    <div class="card ">
+                    <div class="card Karan_Aujla">
                         <div class="play">
                             <img src="Images/play.svg" alt="">
                         </div>
